--- a/_columns/The_Big_Picture/2025-01-21.md
+++ b/_columns/The_Big_Picture/2025-01-21.md
@@ -18,13 +18,29 @@ From the macro-level vantage point of broad stock market averages to the micro-l
 
 
 
-Bulls roared back on Wall Street following the three-day MLK Jr. national holiday. The Nasdaq composite, which made double-digit gains the past two years, rose 0.6%. Stocks initially popped right at the start, likely due to reports that Trump unveiled a plan to enact tariffs of as high as 25% on imports from key trading partners Canada and Mexico on Feb. 1, rather than enact an executive order on Day 1 of his current presidential term.
+Bulls roared back on Wall Street following the three-day MLK Jr. national holiday. The Nasdaq composite, which made double-digit gains the past two years, rose 0.6%.
+
+
+
+
+---
+
+
+[**Long-Term Leaders: Is Microsoft A Buy Now?**](https://www.investors.com/research/microsoft-stock-msft-buy-january/)
+
+
+
+
+---
+
+
+Stocks initially popped right at the start, likely due to reports that Trump unveiled a plan to enact tariffs of as high as 25% on imports from key trading partners Canada and Mexico on Feb. 1, rather than enact an executive order on Day 1 of his current presidential term.
 
 
 Feb. 1 is more than a week away, which gives time for trade negotiators and government leaders to talk.
 
 
-After the close, CNBC reported that the White House is also considering slapping on an additional 10% tariff on Chinese imports. During extended-hours trading, iShares China Large Cap ([FXI](https://research.investors.com/quote.aspx?symbol=FXI)) slipped to as low as 30.41 after rising 1.1% to 30.75 in Tuesday's regular session, but erased those losses and pushed higher.
+After the close, CNBC reported that the White House is also considering slapping on an additional 10% tariff on Chinese imports. During extended-hours trading, iShares China Large Cap ([FXI](https://research.investors.com/quote.aspx?symbol=FXI)) slipped to as low as 30.41, after rising 1.1% to 30.75 in Tuesday's regular session, but erased those losses and pushed higher.
 
 
 The KraneShares CSI China Internet ([KWEB](https://research.investors.com/quote.aspx?symbol=KWEB)) exchange traded fund, rising a mild 0.5% on Tuesday, was virtually unchanged after hours.
@@ -167,7 +183,7 @@ Midcaps Add Stock Market Magic
 They included **Guardant Health** ([GH](https://research.investors.com/quote.aspx?symbol=GH)), which soared to a 52-week high of 45.68 after zooming ahead 23%. A weekly chart highlights how the cancer diagnostics company had initially stumbled on a first breakout attempt past a cup with a 37.04 entry.
 
 
-Arguably, GH also formed a [handle in the cup pattern](https://www.investors.com/how-to-invest/investors-corner/the-basics-spot-traits-of-proper-handles-on-cup-patterns/) that offered a 33.64 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/). Either way, the midcap growth stock sold off three weeks in a row, shaking out new buyers at those entries. By falling to as low as 29.91, Guardant also triggered the [7% loss stop sell rule](https://www.investors.com/how-to-invest/investors-corner/top-growth-stock-golden-sell-rule-when-take-losses-fast/), still the most important rule of investing.
+Arguably, GH also formed a [handle in the cup pattern](https://www.investors.com/how-to-invest/investors-corner/the-basics-spot-traits-of-proper-handles-on-cup-patterns/) that offered a 33.64 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/). Either way, the midcap growth stock sold off three weeks in a row, shaking out new buyers at those entries. By falling to as low as 29.91, Guardant also triggered the [7% stop loss sell rule](https://www.investors.com/how-to-invest/investors-corner/top-growth-stock-golden-sell-rule-when-take-losses-fast/), still the most important rule of investing.
 
 
 
