--- a/_columns/Stock_Of_the_Day/zh-cn/2025-01-23.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2025-01-23.md
@@ -7,7 +7,7 @@ date: 2025-01-23 16:05 -0800
 author: APARNA NARAYANAN
 ---
 
-![](https://www.investors.com/wp-content/uploads/2025/01/sotd-for-01-23-2025-desktop.png)
+![](https://www.investors.com/wp-content/uploads/2025/01/sotd-for-01-23-2025-desktop-2.png)
 
 
 
@@ -37,7 +37,7 @@ Freshpet Stock Near Buy Point
 -----------------------------
 
 
-Shares are near the top of a shallow cup base with a 160.91 [buy point](https://www.investors.com/ibd-university/how-to-buy/), according to [MarketSurge charts](https://marketsurge.investors.com). Freshpet stock dipped 0.4% in Thursday's [stock market action](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). It regained the 50-day moving average in mid January and remains above all the shorter- and longer-term moving averages.
+Shares are near the top of a shallow cup base with a 160.91 [buy point](https://www.investors.com/ibd-university/how-to-buy/), according to [MarketSurge charts](https://marketsurge.investors.com). Freshpet stock dipped 0.4% to 158.03 in Thursday's [stock market action](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). It regained the 50-day moving average in mid January and remains above all the shorter- and longer-term moving averages.
 
 
 FRPT stock rocketed 78% in the past year as investors anticipated the shift to annual profits. That run included two earnings gap-ups in March and May, and a successful breakout in August. Freshpet stock now sits about 2% below the latest entry, which marks the 52-week high.
