--- a/_columns/The_Big_Picture/zh-cn/2025-02-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2025-02-14.md
@@ -55,7 +55,7 @@ The Empire State manufacturing survey drops Tuesday, the Philadelphia Fed manufa
 There will also be a sprinkling of housing readings, with housing starts and permits data due Tuesday and existing-home sales numbers on Friday.
 
 
-While we are into the second half earnings season, some [noteworthy reports are still due next week](https://www.investors.com/research/earnings-preview/walmart-stock-scores-all-time-high-earnings-alibaba-carvana-earnings/). There is a retail flavor, with Dow Jones giant Walmart, **Alibaba** ([BABA](https://research.investors.com/quote.aspx?symbol=BABA)) and Latin American e-commerce play **MercadoLibre** ([MELI](https://research.investors.com/quote.aspx?symbol=MELI)) all reporting.
+While we are into the second half of earnings season, some [noteworthy reports are still due next week](https://www.investors.com/research/earnings-preview/walmart-stock-scores-all-time-high-earnings-alibaba-carvana-earnings/). There is a retail flavor, with Dow Jones giant Walmart, **Alibaba** ([BABA](https://research.investors.com/quote.aspx?symbol=BABA)) and Latin American e-commerce play **MercadoLibre** ([MELI](https://research.investors.com/quote.aspx?symbol=MELI)) all reporting.
 
 
 Roku Boosts This Stock Market Group
@@ -72,7 +72,7 @@ Once again, the performance of IBD's 197 industry groups gave a more granular ac
 Diversified companies, tire makers, newspapers, computer hardware makers and medical supply firms all outperformed.
 
 
-The movies group was also strong as **Roku** ([ROKU](https://research.investors.com/quote.aspx?symbol=ROKU)) soared after Q4 earnings [bested views](https://www.investors.com/stock-lists/new-highs/roku-stock-earnings-new-highs/). The firm also said the number of homes using its platform grew 12% year over year last year. It briefly cleared its 20% profit target from a 86.75 entry and ended the day up 14.1%.
+The movies group was also strong as **Roku** ([ROKU](https://research.investors.com/quote.aspx?symbol=ROKU)) soared after Q4 earnings [bested views](https://www.investors.com/stock-lists/new-highs/roku-stock-earnings-new-highs/). The firm also said the number of homes using its platform grew 12% year over year last year. It briefly cleared its 20% profit target from an 86.75 entry and ended the day up 14.1%.
 
 
 On the flip side, coal companies, gold miners, meat products plays and home care stocks were among the worst performers.
