--- a/_columns/Stock_Of_the_Day/2025-02-18.md
+++ b/_columns/Stock_Of_the_Day/2025-02-18.md
@@ -5,6 +5,7 @@ title: >-
 image: /assets/img/stock-of-the-day/2025-02-18.jpg
 date: 2025-02-18 16:43 -0800
 author: APARNA NARAYANAN
+origin_url: https://www.investors.com/research/ibd-stock-of-the-day/upstart-stock-buy-point-brink-return-to-profits/
 ---
 
 
