--- a/_columns/Swing_Trading/2025-01-24.md
+++ b/_columns/Swing_Trading/2025-01-24.md
@@ -5,6 +5,7 @@ title: >-
 date: 2025-01-24 16:59 -0800
 image: /assets/img/swing-trading/2025-01-24.jpg
 author: JUSTIN NIELSEN
+origin_url: https://www.investors.com/research/swing-trading/early-entry-gave-cushion-on-united-airlines-stock-earnings/
 ---
 
 
