--- a/_columns/Swing_Trading/2025-01-31.md
+++ b/_columns/Swing_Trading/2025-01-31.md
@@ -5,6 +5,7 @@ title: >-
 date: 2025-01-31 15:56 -0800
 image: /assets/img/swing-trading/2025-01-31.jpg
 author: JUSTIN NIELSEN
+origin_url: https://www.investors.com/research/swing-trading/ge-vernova-stock-sold-before-deepseek-drop/
 ---
 
 
