--- a/_columns/Swing_Trading/2025-02-07.md
+++ b/_columns/Swing_Trading/2025-02-07.md
@@ -5,6 +5,7 @@ title: >-
 date: 2025-02-07 16:56 -0800
 image: /assets/img/swing-trading/2025-02-07.jpg
 author: JUSTIN NIELSEN
+origin_url: https://www.investors.com/research/swing-trading/abbott-labs-stock-answer-to-weekend-volatility/
 ---
 
 
