--- a/_columns/Swing_Trading/2025-02-14.md
+++ b/_columns/Swing_Trading/2025-02-14.md
@@ -5,6 +5,7 @@ title: >-
 date: 2025-02-14 16:51 -0800
 image: /assets/img/swing-trading/2025-02-14.jpg
 author: JUSTIN NIELSEN
+origin_url: https://www.investors.com/research/swing-trading/cava-stock-fast-casual-trade-profit/
 ---
 
 
