--- a/_columns/The_Big_Picture/2025-02-13.md
+++ b/_columns/The_Big_Picture/2025-02-13.md
@@ -4,6 +4,7 @@ title: >-
   Stock Market Eyes Record Highs Despite Trump's Tariffs Announcement; Axon, Broadcom Near Buy Points
 date: 2025-02-13 17:49 -0800
 author: SCOTT LEHTONEN
+origin_url: https://www.investors.com/market-trend/the-big-picture/stock-market-dow-jones-nasdaq-sp500-trump-tariffs/
 ---
 
 
