--- a/_columns/The_Big_Picture/2025-02-14.md
+++ b/_columns/The_Big_Picture/2025-02-14.md
@@ -4,6 +4,7 @@ title: >-
   Stock Market Mixed Ahead Of Presidents Day; Fed Minutes, Walmart Earnings Due
 date: 2025-02-14 17:26 -0800
 author: MICHAEL LARKIN
+origin_url: https://www.investors.com/market-trend/the-big-picture/stock-market-dow-jones-nasdaq-sp500-presidents-day/
 ---
 
 
