--- a/_columns/The_Big_Picture/2025-02-18.md
+++ b/_columns/The_Big_Picture/2025-02-18.md
@@ -4,6 +4,7 @@ title: >-
   Stock Market Shows Positive Reversal, But S&P 500, Nasdaq Trail These Other Indexes; IBD 50 Index Falls
 date: 2025-02-18 20:59 -0800
 author: DAVID SAITO-CHUNG
+origin_url: https://www.investors.com/market-trend/the-big-picture/stock-market-shows-positive-reversal-but-s-ibd-50-index-falls/
 ---
 
 
