--- a/_columns/The_Big_Picture/2025-02-19.md
+++ b/_columns/The_Big_Picture/2025-02-19.md
@@ -4,6 +4,7 @@ title: >-
   Value Stocks Take Lead In Today's Stock Market As Sellers Stun This Growth Stock; Three Sell Rules To Behold Today
 date: 2025-02-19 20:25 -0800
 author: DAVID SAITO-CHUNG
+origin_url: https://www.investors.com/market-trend/the-big-picture/value-growth-stocks-stock-market-taser-axon-hubspot/
 ---
 
 
