--- a/_columns/The_Big_Picture/2025-02-20.md
+++ b/_columns/The_Big_Picture/2025-02-20.md
@@ -4,6 +4,7 @@ title: >-
   Dow Jones Slides 450 Points; These 6 Stock Market Leaders Trigger Sell Signals
 date: 2025-02-20 17:38 -0800
 author: SCOTT LEHTONEN
+origin_url: https://www.investors.com/market-trend/the-big-picture/dow-jones-stock-market-nasdaq-sp500-dow-jones-sell-signals/
 ---
 
 
