--- a/_columns/Stock_Of_the_Day/2025-02-13.md
+++ b/_columns/Stock_Of_the_Day/2025-02-13.md
@@ -5,6 +5,7 @@ title: >-
 image: /assets/img/stock-of-the-day/2025-02-13.jpg
 date: 2025-02-13 13:30 -0800
 author: HARRISON MILLER
+origin_url: https://www.investors.com/research/ibd-stock-of-the-day/royal-caribbean-rcl-stock-buy-point-february-2025-dividend-buyback-plan/
 ---
 
 
