--- a/_columns/Stock_Of_the_Day/2025-02-14.md
+++ b/_columns/Stock_Of_the_Day/2025-02-14.md
@@ -5,6 +5,7 @@ title: >-
 image: /assets/img/stock-of-the-day/2025-02-14.jpg
 date: 2025-02-14 13:30 -0800
 author: HARRISON MILLER
+origin_url: https://www.investors.com/research/ibd-stock-of-the-day/howmet-aerospace-hwm-stock-buy-point-earnings-trump-defense-budget/
 ---
 
 
