--- a/_columns/Stock_Of_the_Day/2025-02-19.md
+++ b/_columns/Stock_Of_the_Day/2025-02-19.md
@@ -5,6 +5,7 @@ title: >-
 image: /assets/img/stock-of-the-day/2025-02-19.jpg
 date: 2025-02-19 16:01 -0800
 author: KIT NORTON
+origin_url: https://www.investors.com/research/ibd-stock-of-the-day/sp-500-brownbrown-stock-insurance-surged-last-year-gaining-on-buy-point/
 ---
 
 
