--- a/_columns/Stock_Of_the_Day/2025-02-20.md
+++ b/_columns/Stock_Of_the_Day/2025-02-20.md
@@ -5,6 +5,7 @@ title: >-
 image: /assets/img/stock-of-the-day/2025-02-20.jpg
 date: 2025-02-20 13:38 -0800
 author: HARRISON MILLER
+origin_url: https://www.investors.com/research/ibd-stock-of-the-day/mastercard-stock-buy-point-q4-earnings-feb-2025/
 ---
 
 
