--- a/_columns/Swing_Trading/2025-01-20.md
+++ b/_columns/Swing_Trading/2025-01-20.md
@@ -5,6 +5,7 @@ title: >-
 date: 2025-01-20 23:30 -0800
 image: /assets/img/swing-trading/2025-01-20.jpg
 author: JUSTIN NIELSEN
+origin_url: https://www.investors.com/research/swing-trading/swingtrader-watch-list/
 ---
 
 
