--- a/_columns/The_Big_Picture/2025-02-26.md
+++ b/_columns/The_Big_Picture/2025-02-26.md
@@ -111,5 +111,8 @@ But the news isn't all bad in the growth-stock space. Health care name **Masimo*
 [Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
+[Futures: Nvidia Falls Despite Strong Earnings, Guidance](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-stock-earnings-amazing-blackwell-demand-salesforce-snowflake/)
+
+
 
 
