--- a/_columns/Stock_Of_the_Day/2025-03-13.md
+++ b/_columns/Stock_Of_the_Day/2025-03-13.md
@@ -73,7 +73,7 @@ The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-ge-aer
 GE Aerospace stock carries an EPS Rating of 95 out of a best-possible 99.
 
 
-In 2024, the company increased adjusted earnings per share by 56% as adjusted revenue grew 10%, the company's annual report shows. Free cash flow swelled 28% over the full year. Operating profit margin expanded by 330 basis points to 20.7%.
+In 2024, the company increased adjusted earnings per share by 56% as adjusted revenue grew 10%, its annual report shows. Free cash flow swelled 28% over the full year. Operating profit margin expanded by 330 basis points to 20.7%.
 
 
 Analysts expect an 18% GE earnings gain in 2025 and a further 19% rise in 2026, FactSet shows.
