--- a/_columns/Stock_Of_the_Day/2025-03-20.md
+++ b/_columns/Stock_Of_the_Day/2025-03-20.md
@@ -57,6 +57,18 @@ In the current, unpredictable market, IBD suggests stocks with ATRs of 3 or belo
 IBD's Stock Market Exposure guide currently recommends investors have a maximum of 20% of their capital invested. Now is a good time to build watchlists and wait for a [follow-through day](https://www.investors.com/how-to-invest/investors-corner/stock-market-bottoms-how-to-invest-using-follow-through-days/) to launch a new rally.
 
 
+[Defense Stocks News And Analysis](https://www.investors.com/tag/defense-and-aerospace-stocks-and-industry-news/)
+-----------------------------------------------------------------------------------------------------------------
+
+[![Fighter jets](https://www.investors.com/wp-content/uploads/2023/10/Stock-fighterjets-04-adobe-300x169.jpg)](https://www.investors.com/news/ngad-contract-trump-sixth-generation-fighter-jet-lockheed-martin-boeing-march-2025/) [Trump Picks Boeing Over Lockheed Martin For $20 Billion Fighter Contract](https://www.investors.com/news/ngad-contract-trump-sixth-generation-fighter-jet-lockheed-martin-boeing-march-2025/)President Donald Trump on Friday awarded Boeing an estimated $20 billion contract to develop a sixth-generation of fighter jets. Bloomberg and Reuters first confirmed that Boeing won the contract. Boeing stock swung... [Read More](https://www.investors.com/news/ngad-contract-trump-sixth-generation-fighter-jet-lockheed-martin-boeing-march-2025/)[![](https://www.investors.com/wp-content/uploads/2017/07/SSA_plane_072417_adobe-300x170.jpg)](https://www.investors.com/stock-lists/new-highs/insurance-stocks-new-highs-root-bow/) [These Insurance Stocks And Biotech Leader Hit New Highs As Stock Market Crumbles](https://www.investors.com/stock-lists/new-highs/insurance-stocks-new-highs-root-bow/)It is a tough environment, but a handful of stocks have bucked the heavy selling and climbed to new highs in recent days. Insurance stocks have been doing well, while the aerospace... [Read More](https://www.investors.com/stock-lists/new-highs/insurance-stocks-new-highs-root-bow/)[![Booz Allen stock](https://www.investors.com/wp-content/uploads/2020/05/Stock-BoozAllenHamilton-02-shutt-300x169.jpg)](https://www.investors.com/news/technology/booz-allen-stock-palantir-stock-hegseth-contracts/) [Hegseth Cancels Defense Contracts. IT Government Contractors Sell Off.](https://www.investors.com/news/technology/booz-allen-stock-palantir-stock-hegseth-contracts/)Shares in government contractors Booz Allen Hamilton, Gartner, CACI International and Science Applications International tumbled on Thursday after Secretary of Defense Pete Hegseth said the Pentagon was canceling $580 million in contracts,... [Read More](https://www.investors.com/news/technology/booz-allen-stock-palantir-stock-hegseth-contracts/)
+###### [View More Defense Stocks News And Analysis](https://www.investors.com/tag/defense-and-aerospace-stocks-and-industry-news/)
+
+
+
+
+---
+
+
 *You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)*
 
 
