--- a/_columns/The_Big_Picture/2025-03-26.md
+++ b/_columns/The_Big_Picture/2025-03-26.md
@@ -29,7 +29,7 @@ A daily chart of the premier index for growth stocks highlights two things worth
 Two, Wednesday's negative action threw a blanket drenched in ice water on the positive action seen just two days earlier.
 
 
-Specifically, Monday's 2.3% advance by the Nasdaq carried the spirit of a Day 9 follow-through day amid the market's current new rally attempt. But after Wednesday's selling massacre, the composite index fell well below the low of Monday's price bar. Investor's Business Daily research finds that's usually a no-no when it comes to a successful follow-through.
+Specifically, Monday's 2.3% advance by the Nasdaq carried the spirit of a Day 9 follow-through day amid the market's current new rally attempt. But after Wednesday's selling massacre, the composite index fell well below the low of Monday's price bar. Investor's Business Daily research finds that's usually a no-no when it comes to a [successful follow-through day](https://www.investors.com/how-to-invest/investors-corner/what-is-a-follow-through-day/).
 
 
 
