--- a/_columns/Stock_Of_the_Day/2025-03-27.md
+++ b/_columns/Stock_Of_the_Day/2025-03-27.md
@@ -81,7 +81,7 @@ Shares have a strong [IBD Digital](https://www.investors.com/product/ibd-digital
 [Biotech And Pharma Stocks News](https://www.investors.com/tag/biotech-and-pharma-stock-news/)
 ----------------------------------------------------------------------------------------------
 
-[![Merck stock](https://www.investors.com/wp-content/uploads/2017/10/stock-Merck-02-shutter-300x169.jpg)](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/) [Merck's Biggest Moneymaker Could Get Even Bigger. But Will It Help Downtrodden Shares?](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/)The Food and Drug Administration is due to make an approval decision on injectable Keytruda by mid-September in a move that could bolster Merck's biggest franchise and downtrodden Merck stock. Intravenous Keytruda... [Read More](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/)[![biotech stock](https://www.investors.com/wp-content/uploads/2019/02/stock-gene-04-adobe-300x169.jpg)](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/) [Soleno Surges Into Breakout On Hard-Won Obesity-Tied Approval, But Aardvark Reverses Lower](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/)Soleno Therapeutics won a hard-fought approval for a drug that treats excessive hunger associated with a rare disease. The biotech stock rocketed into a breakout. The company's drug, extended-release tablets called Vykat... [Read More](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/)[![China Pharmaceuticals Medicines](https://www.investors.com/wp-content/uploads/2025/03/Stock-ChinaPharmaMedicines-01-adobe-300x169.jpg)](https://www.investors.com/research/ibd-stock-analysis/veeva-stock-china-crm-merck-moderna-gsk/) [China Expansion Helps Fuel This AI-Powered Cloud Stock In Rough Market](https://www.investors.com/research/ibd-stock-analysis/veeva-stock-china-crm-merck-moderna-gsk/)Already partnering with Big Pharma powerhouses like Merck, Moderna and GSK, Veeva Systems — a provider of cloud-based software for the life sciences industry — has just teamed up with six of... [Read More](https://www.investors.com/research/ibd-stock-analysis/veeva-stock-china-crm-merck-moderna-gsk/)
+[![Arcutis Biotherapeutics](https://www.investors.com/wp-content/uploads/2024/07/Stock-ArcutisPharmaceuticals-01-shutt-300x169.jpg)](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/) [Why IBD 50's Arcutis Is Outplaying The Biotech Tape And Sprinting Toward A Profit-Taking Zone](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/)Arcutis Biotherapeutics wants to eliminate a terrible trade-off for patients with eczema and psoriasis. And Arcutis stock investors are taking notice, sending shares sky-high over the past year. Topical steroids are a... [Read More](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/)[![Merck stock](https://www.investors.com/wp-content/uploads/2017/10/stock-Merck-02-shutter-300x169.jpg)](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/) [Merck's Biggest Moneymaker Could Get Even Bigger. But Will It Help Downtrodden Shares?](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/)The Food and Drug Administration is due to make an approval decision on injectable Keytruda by mid-September in a move that could bolster Merck's biggest franchise and downtrodden Merck stock. Intravenous Keytruda... [Read More](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/)[![biotech stock](https://www.investors.com/wp-content/uploads/2019/02/stock-gene-04-adobe-300x169.jpg)](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/) [Soleno Surges Into Breakout On Hard-Won Obesity-Tied Approval, But Aardvark Reverses Lower](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/)Soleno Therapeutics won a hard-fought approval for a drug that treats excessive hunger associated with a rare disease. The biotech stock rocketed into a breakout. The company's drug, extended-release tablets called Vykat... [Read More](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/)
 ###### [Biotech And Pharma Stocks News](https://www.investors.com/tag/biotech-and-pharma-stock-news/)
 
 
