--- a/_columns/Stock_Of_the_Day/2025-03-27.md
+++ b/_columns/Stock_Of_the_Day/2025-03-27.md
@@ -69,7 +69,7 @@ Highly Rated Biotech Stock
 --------------------------
 
 
-ADMA stock is currently forming a [cup base](https://www.investors.com/how-to-invest/investors-corner/corner-cup-without-handle/) with a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) at 23.64, according to [MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq). It's also trying to [build a handle](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/). The March 25 high of 25.70 would be the handle buy point, but could already serve as an early entry.
+ADMA stock is currently forming a [cup base](https://www.investors.com/how-to-invest/investors-corner/corner-cup-without-handle/) with a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) at 23.64, according to [MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq). It's also trying to [build a handle](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-lam-research-cup-with-handle-launched-75-percent-advance/). The March 25 high of 20.70 would be the handle buy point, but could already serve as an early entry.
 
 
 Notably, ADMA Biologics ranks third on the [IBD 50](https://research.investors.com/stock-lists/ibd-50/) list of elite growth stocks, behind fellow biotech **Travere Therapeutics** ([TVTX](https://research.investors.com/quote.aspx?symbol=TVTX)).
@@ -81,7 +81,7 @@ Shares have a strong [IBD Digital](https://www.investors.com/product/ibd-digital
 [Biotech And Pharma Stocks News](https://www.investors.com/tag/biotech-and-pharma-stock-news/)
 ----------------------------------------------------------------------------------------------
 
-[![Arcutis Biotherapeutics](https://www.investors.com/wp-content/uploads/2024/07/Stock-ArcutisPharmaceuticals-01-shutt-300x169.jpg)](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/) [Why IBD 50's Arcutis Is Outplaying The Biotech Tape And Sprinting Toward A Profit-Taking Zone](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/)Arcutis Biotherapeutics wants to eliminate a terrible trade-off for patients with eczema and psoriasis. And Arcutis stock investors are taking notice, sending shares sky-high over the past year. Topical steroids are a... [Read More](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/)[![Merck stock](https://www.investors.com/wp-content/uploads/2017/10/stock-Merck-02-shutter-300x169.jpg)](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/) [Merck's Biggest Moneymaker Could Get Even Bigger. But Will It Help Downtrodden Shares?](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/)The Food and Drug Administration is due to make an approval decision on injectable Keytruda by mid-September in a move that could bolster Merck's biggest franchise and downtrodden Merck stock. Intravenous Keytruda... [Read More](https://www.investors.com/news/technology/merck-stock-subcutaneous-keytruda-fda-decision-date/)[![biotech stock](https://www.investors.com/wp-content/uploads/2019/02/stock-gene-04-adobe-300x169.jpg)](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/) [Soleno Surges Into Breakout On Hard-Won Obesity-Tied Approval, But Aardvark Reverses Lower](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/)Soleno Therapeutics won a hard-fought approval for a drug that treats excessive hunger associated with a rare disease. The biotech stock rocketed into a breakout. The company's drug, extended-release tablets called Vykat... [Read More](https://www.investors.com/news/technology/biotech-stock-soleno-therapeutics-prader-willi-approval/)
+[![](https://www.investors.com/wp-content/uploads/2025/03/sotd-for-03-28-2025-desktop-1-1-300x158.png)](https://www.investors.com/research/ibd-stock-of-the-day/travere-therapeutics-biotech-stock-filspari-iga-nephropathy-fsgs/) [IBD Stock Of The Day Travere Therapeutics: A Breakout And $1 Billion Opportunity Loom](https://www.investors.com/research/ibd-stock-of-the-day/travere-therapeutics-biotech-stock-filspari-iga-nephropathy-fsgs/)Travere Therapeutics is Friday's IBD Stock Of The Day. The biotech stock is eyeing two potential entries and a second approval for its biggest moneymaker, Filspari. Filspari treats immunoglobulin A nephropathy, a... [Read More](https://www.investors.com/research/ibd-stock-of-the-day/travere-therapeutics-biotech-stock-filspari-iga-nephropathy-fsgs/)[![Novo Nordisk](https://www.investors.com/wp-content/uploads/2019/09/stock-NovoNordisk-02-shutter-300x169.jpg)](https://www.investors.com/news/technology/novo-nordisk-lexicon-pharmaceuticals-obesity-treatment/) [Novo Nordisk Inks Its Second Big Obesity Deal In A Week — And It's Not For A GLP-1](https://www.investors.com/news/technology/novo-nordisk-lexicon-pharmaceuticals-obesity-treatment/)Novo Nordisk will pay Lexicon Pharmaceuticals $75 million up front to license its experimental obesity treatment. The news sent penny stock Lexicon into the stratosphere. Lexicon is taking a different tact with... [Read More](https://www.investors.com/news/technology/novo-nordisk-lexicon-pharmaceuticals-obesity-treatment/)[![Arcutis Biotherapeutics](https://www.investors.com/wp-content/uploads/2024/07/Stock-ArcutisPharmaceuticals-01-shutt-300x169.jpg)](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/) [Why IBD 50's Arcutis Is Outplaying The Biotech Tape And Just Reentered Its Buy Zone](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/)Arcutis Biotherapeutics wants to eliminate a terrible trade-off for patients with eczema and psoriasis. And Arcutis stock investors are taking notice, sending shares sky-high over the past year. Topical steroids are a... [Read More](https://www.investors.com/research/the-new-america/arcutis-biotherapeutics-arcutis-stock-zoryve/)
 ###### [Biotech And Pharma Stocks News](https://www.investors.com/tag/biotech-and-pharma-stock-news/)
 
 
