--- a/_columns/The_Big_Picture/2025-04-15.md
+++ b/_columns/The_Big_Picture/2025-04-15.md
@@ -120,7 +120,7 @@ New Software Leader Rises Again
 Both stocks helped fuel a 1.1% gain for the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)), and the exchange traded fund closed above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) for the first time in nearly three weeks.
 
 
-View General Market Indicators chart page here.
+[View General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2025/04/DailyGMI_041525.pdf).
 
 
 *Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
